--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-base64": "^3.7.7",
     "lucide-react": "^0.482.0",
-    "next": "15.1.7",
+    "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.3",
+    "socket.io-client": "^4.8.1",
     "tailwindcss-animate": "^1.0.7",
     "ultravox-client": "^0.3.4"
   },
